[gd_scene load_steps=2 format=3 uid="uid://don0h7c4jtc4i"]

[ext_resource type="Script" uid="uid://bk35bj8jonti3" path="res://Scripts/signal_manager.gd" id="1_bfmq8"]

[node name="SignalManager" type="Node2D"]
script = ExtResource("1_bfmq8")

[connection signal="PieceEnter" from="." to="." method="_on_piece_enter"]
[connection signal="PieceExit" from="." to="." method="_on_piece_exit"]
[connection signal="SquareEnter" from="." to="." method="_on_square_enter"]
[connection signal="SquareExit" from="." to="." method="_on_square_exit"]
